Fixed Resizing Issues on Grid
Grid now will automatically resize to fit the page and not overlap other grids

Haven't tested with excess data in the description or title yet but I wanted this to come back to incase something happened.

--- a/MealPreppers/MealPreppers/Content/CustomCss/FriendFeed/Middle/FriendFeedCSS.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/FriendFeed/Middle/FriendFeedCSS.css
@@ -17,6 +17,7 @@
     height: 300px;
     overflow-y: hidden;
     cursor: pointer;
+    justify-content:initial;
     
    
 }
