--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
@@ -2,32 +2,73 @@
 #grid-layout {
     background-color: lightcyan;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, 250px);
     width: 100%;
-    height: 850px;
+    height: 100%;
+    
     padding-top: 10px;
     padding-bottom: 10px;
     border: 5px solid black;
     overflow-y: auto;
     align-content: start;
-    
+    justify-content: center;
 }
 
 .grid-item {
+    display: flex;
     background-color: white;
-    border: 5px solid black;
+    border-radius: 5px;
+    border: 2px solid #efefef;
     height: 250px;
     width: 90%;
     margin: auto;
     margin-bottom: 5px;
     
     text-align: center;
-    padding: 0px;
+    min-width: 150px;
+    
+    max-height: 250px;
     overflow-y: auto;
+    
 }
 
 .item-picture {
     margin-top: 10px;
     width: 50%;
-    object-fit: contain;
+}
+
+.card-img-top{
+    width: 100%;
+    object-fit: cover;
+    height: 100px;
+}
+
+.card-text{
+    margin-top: 0px;
+    height: 20%;
+   
+}
+
+.grid-image-container{
+    
+    width: 100%;
+    height: 100px;
+}
+
+.card-title{
+    margin-top: 3px;
+    margin-bottom: 3px;
+    height: 25%;
+    
+}
+
+.recipeDescContainer {
+    height: 50%;
+    overflow-y: auto;
+    
+}
+
+.grid-button{
+    
+    object-fit: cover;
 }
